fix: customer rooutes
